@@ -1,0 +1,20 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderFrameSet {FRAMESET} at (0,0) size 800x600
+      RenderFrame {FRAME} at (0,0) size 398x600
+        layer at (0,0) size 396x596
+          RenderView at (0,0) size 396x596
+        layer at (0,0) size 396x596
+          RenderBlock {HTML} at (0,0) size 396x596
+            RenderBody {BODY} at (8,8) size 380x580
+              RenderBlock {DIV} at (0,0) size 380x18
+                RenderText {#text} at (0,0) size 61x18
+                  text run at (0,0) width 61: "PASSED"
+      RenderFrame {FRAME} at (402,0) size 398x600
+        layer at (0,0) size 396x596
+          RenderView at (0,0) size 396x596
+        layer at (0,0) size 396x8
+          RenderBlock {HTML} at (0,0) size 396x8
+            RenderBody {BODY} at (8,8) size 380x0
